# ib-ox-core

./: .gitignore  README.md  deploy.sh  docker-compose.yml  nginx-ecs.conf  nginx.conf
api/: .gitignore  Dockerfile  alembic.ini  auth.db  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 0001_initial.py  0002_add_is_admin.py
api/src/ib_ox_api/: __init__.py  auth.py  cli.py  data.py  database.py  main.py  models.py  query.py  settings.py  suppression.py
api/tests/: conftest.py  test_api.py
dashboard/: Dockerfile  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/.svelte-kit/: ambient.d.ts  non-ambient.d.ts
dashboard/.svelte-kit/adapter-node/: manifest-full.js  manifest.js
dashboard/.svelte-kit/adapter-node/chunks/: index.js  index2.js
dashboard/.svelte-kit/adapter-node/entries/pages/: _layout.svelte.js  _layout.ts.js
dashboard/.svelte-kit/adapter-node/nodes/: 0.js  2.js  3.js  5.js
dashboard/.svelte-kit/output/client/.vite/: manifest.json
dashboard/.svelte-kit/output/client/_app/: version.json
dashboard/.svelte-kit/types/: route_meta_data.json
dashboard/src/: app.css  app.html
dashboard/src/lib/: api.ts  chartUtils.ts  csvUtils.ts  stores.ts
dashboard/src/lib/components/: ChartCard.svelte  DataTable.svelte  QueryBuilder.svelte
dashboard/src/routes/: +layout.svelte  +layout.ts  +page.svelte
dashboard/src/routes/admin/: +page.svelte
dashboard/src/routes/login/: +page.svelte
dashboard/src/routes/query/: +page.svelte
terraform/: alb.tf  ecr.tf  ecs.tf  locals.tf  main.tf  outputs.tf  variables.tf
(+34 files in other folders)
